snapshot_tests/operations/errors/InvalidObjectValues5.re
/**
 * Custom scalars should not throw
 */
module MyQuery = [%graphql
  {|
    query {
        invalidObjectValues(
            nonRec: {
                nonNullableField: "!"
                nullableArray: [""]
                field: ""
                enum: FIRST
                custom: { some: "value" }
            }
            rec: {
                otherField: ""
                inner: {
                    otherField: ""
                }
                enum: []
            }
        )
    }
|}
];
